# minecraft-server-discord-bot-python

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  bot.env  bot.py  bot.yaml  env.b  pyproject.toml  upgrade.py
bot/: __main__.py
tests/: test_bot.py
